# compute_Acceleration

./: LICENSE  README.md  local.properties
app/: build.gradle
app/src/androidTest/java/cn/qianzhengwei/libhc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib-qml.cpp  native-lib.cpp
app/src/main/cpp/include/: dspCV.idl  dspCV_concurrency.h  dspCV_hvx.h  dspCV_worker.h  fastcv.h  fastcv.inl  hetcompute_dsp.h  hetcompute_dsp.idl
app/src/main/cpp/include/hetcompute/internal/device/: cldevice.hh
app/src/main/java/cn/qianzhengwei/libhc/: FastCVManager.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/cn/qianzhengwei/libhc/: ExampleUnitTest.java
backup/: FastCVManager.java
gradle/wrapper/: gradle-wrapper.properties
